Union de css entre menu y index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-
-<body>
+<body class="pagina-inicio">
 
     <header>
         <h1>Party food </h1>
