Ingreso de administrador creado como .html

--- a/index.html
+++ b/index.html
@@ -15,55 +15,60 @@
     </header>
 
 
-<section class="cards">
-    <div class="card">
-        <a href="menu.html?categoria=sushi">
-            <img src="Imagenes/Sushi.png" alt="Sushi">
-        </a>
-        <h3>Food Sushi</h3>
-    </div>
+    <section class="cards">
+        <div class="card">
+            <a href="menu.html?categoria=sushi">
+                <img src="Imagenes/Sushi.png" alt="Sushi">
+            </a>
+            <h3>Food Sushi</h3>
+        </div>
 
-    <div class="card">
-        <a href="menu.html?categoria=pizza">
-            <img src="Imagenes/Pizza.png" alt="Pizza">
-        </a>
-        <h3>Food Pizza</h3>
-    </div>
+        <div class="card">
+            <a href="menu.html?categoria=pizza">
+                <img src="Imagenes/Pizza.png" alt="Pizza">
+            </a>
+            <h3>Food Pizza</h3>
+        </div>
 
-    <div class="card">
-        <a href="menu.html?categoria=hamburguesa">
-            <img src="Imagenes/Hamburguesa.png" alt="Hamburguesa">
-        </a>
-        <h3>Food Hamburguesa</h3>
-    </div>
+        <div class="card">
+            <a href="menu.html?categoria=hamburguesa">
+                <img src="Imagenes/Hamburguesa.png" alt="Hamburguesa">
+            </a>
+            <h3>Food Hamburguesa</h3>
+        </div>
 
-    <div class="card">
-        <a href="menu.html?categoria=hotdog">
-            <img src="Imagenes/hotdog.png" alt="Hotdog">
-        </a>
-        <h3>Food Completos</h3>
-    </div>
+        <div class="card">
+            <a href="menu.html?categoria=hotdog">
+                <img src="Imagenes/hotdog.png" alt="Hotdog">
+            </a>
+            <h3>Food Completos</h3>
+        </div>
 
-    <div class="card">
-        <a href="menu.html?categoria=papas">
-            <img src="Imagenes/Papas.png" alt="Papas">
-        </a>
-        <h3>Food Papas Fritas</h3>
-    </div>
+        <div class="card">
+            <a href="menu.html?categoria=papas">
+                <img src="Imagenes/Papas.png" alt="Papas">
+            </a>
+            <h3>Food Papas Fritas</h3>
+        </div>
 
-    <div class="card">
-        <a href="menu.html?categoria=combo">
-            <img src="Imagenes/Combo.png" alt="Combo">
-        </a>
-        <h3>Food Combo</h3>
-    </div>
-</section>
+        <div class="card">
+            <a href="menu.html?categoria=combo">
+                <img src="Imagenes/Combo.png" alt="Combo">
+            </a>
+            <h3>Food Combo</h3>
+        </div>
+    </section>
 
 
 
 
     <footer>
-        <p>@ Whatsapp</p>
+        <p>
+            @ Whatsapp |
+            <a href="admin.html">Administrador</a>
+        </p>
+
+
         <p>@ Instagram</p>
         <p>Ubicacion</p>
     </footer>
