--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menú</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -40,6 +41,7 @@
         descripcion.textContent = 'Deliciosos rollos de sushi frescos, preparados con los mejores ingredientes.';
         imagen.src = 'Imagenes/Sushi.png';
         imagen.alt = 'Sushi';
+
         break;
       case 'pizza':
         titulo.textContent = 'Pizza';
@@ -49,7 +51,7 @@
         break;
       case 'hamburguesa':
         titulo.textContent = 'Hamburguesa';
-        descripcion.textContent = 'Jugosas hamburguesas con pan artesanal y los mejores toppings.';
+        descripcion.textContent = 'Estas en la categoria Hamburgesas y relacionados.';
         imagen.src = 'Imagenes/Hamburguesa.png';
         imagen.alt = 'Hamburguesa';
         break;
